--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="./bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="./bootstrap/bootstrap-theme.min.css" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    <style>
-      html,body{
-        height: 100%;
-        width: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="manifest" href="./manifest.json">
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
+  <style>
+    html,
+    body {
+      height: 100%;
+      width: 100%;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- uni 的 SDK -->
+  <script type="text/javascript" src="https://js.cdn.aliyun.dcloud.net.cn/dev/uni-app/uni.webview.1.5.2.js"></script>
+  <script type="text/javascript">
+    // document.addEventListener('UniAppJSBridgeReady', function() {
+    //   document.body.addEventListener('click', function() {
+    //     //  uni.switchTab({
+    //     //     url: '/pages/cart/cart'
+    //     //   });
+    //     uni.postMessage({
+    //       data: {
+    //         action: 'message'
+    //       }
+    //     });
+    //     uni.getEnv(function(res) {
+    //       console.log('当前环境：' + JSON.stringify(res));
+    //     });
+    //   })
+    // });
+  </script>
+</body>
+
 </html>
